gobmkida/c1/find_lunch
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_lunch/src/engine/worm.c:1450:27: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v6 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v5); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_lunch/src/obj/1/worm.o] Error 1
